# batchtk

./: .gitignore  LICENSE.md  README.md  avatk.toml  pyproject.toml  setup.py
.github/workflows/: batchtk_publish.yml  batchtk_test.yml
avatk/: batchify.ipynb
avatk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
avatk/batchtk/: batchify.py
avatk/ipynb/: batchify.ipynb
avatk/runners/: net_runner.py  rem_runner.py  remote_runner.py
avatk/runtk/: net_runner.py  runners.py
batchtk/inspyredtk/: search.py
batchtk/netpyne/: __init__.py  comm.py  header.py  runners.py
batchtk/raytk/: search.py
batchtk/runtk/: __init__.py  config.py  dispatchers.py  header.py  runners.py  sockets.py  submits.py  trial.py  util_class.py
batchtk/sshtk/: __init__.py  dispatchers.py  submits.py  utils.py
batchtk/utils/: __init__.py  utils.py
docs/uml/: job_seq.puml
examples/: grid_srch.py  init.py  optuna_srch.py  sge.sh  testenv.py  utils.py
examples/ca3/: grid_search.py  init.py  shim_search.py  utils.py
examples/ca3_inet/: ca3.py  cfg.py  grid_search.py  init.py  netParams.py  shim_search.py
examples/ca3_sfs/: ca3.py  cfg_demo.py  grid_search.py  init.py  netparams_demo.py  shim_search.py  utils.py
examples/colab/: basic_runner.py  batchtk0.ipynb  netpyne_runner.py  pubtk0.ipynb  (+3 more)
test/: testenv.py
tests/: cleanup.sh  cleanup.zsh  header.py  socket_py.py  test_config.py  test_dispatcher.py  test_dispatchers.py  test_job.py  test_serialize.py  test_sh.py  test_socket.py  test_submit.py  test_trial.py  test_trial0.py  test_zsh.py  utils.py
(+110 files in other folders)
