[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "batchtk"
version = "0.0.2"
authors = [
    { name = "James Chen", email = "jchen.6727@gmail.com" },
]
description = "Batch submission toolkit for Python"
dependencies = [
    'importlib-metadata; python_version>"3"',
    'numpy',
    'pandas',
]

readme = "README.md"

[project.optional-dependencies]
ssh = ['fabric>3',
]
test = ['python-dotenv>1',
        'pytest>7']